assets/css/dark-styles.scss
body{

    &.dark{
        --text: #DBDBDB;
        --flip-text: var(--text);
        --focus: #fff;
        --highlight: #de935f;
        --primary: #034AD8;
        --body-bg-color: #121516;
        --code-element: #b294bb;
        --code-attribute: #8abeb7;
        --code-bool: #ee6868;
        --code-params: #de935f;
        --code-values: #b5bd68;
        --background-body: #121516;
        --background: #1d1f21;
        --background-alt: #080808;
        --selection: #616161;
        --text-main: #DBDBDB;
        --text-bright: #fff;
        --text-muted: #c8c8c8;
        --links: #de935f;
        --focus: #ff4d4d;
        --border: #ffffff;
        --code: #fff;
        --animation-duration: 1s;
        --button-base: #2b2b2b;
        --button-hover: #606060;
        --scrollbar-thumb: rgb(85, 85, 85);
        --form-placeholder: #e0e0e0;
        --form-text: #f0f0f0;
        --variable: #c85f5f;

        // pagefind
        --pagefind-ui-primary: var(--text);
        --pagefind-ui-text: var(--text);
        --pagefind-ui-background: var(--background);
        --pagefind-ui-border: var(--background);
        --pagefind-ui-tag: var(--background);

      
        h1, h2, h3, h4, h5, h6{
            color: var(--text)
        }

        .chroma {
            background-color: var(--background-body);

            .o {
                color: var(--text);
            }

            .nt {
                color: var(--code-element);
            }

            .na {
                color: var(--code-attribute);
            }

            .s {
                color: var(--code-params);
            }

            .kc {
                color: var(--code-bool);
            }

            .s2 {
                color: var(--code-values);
            }

            .mi {
                color: var(--highlight);
            }

           
        }


        [data-add]>span {
            background-color: rgba(0, 53, 6, 0.825);
        }

        [data-remove]>span {
            background-color: rgba(53, 0, 0, 0.825);
        }

        .header>.row .logo-dark {
            display: block;
        }

        .header>.row .logo-light {
            display: none;
        }
         
        .header>.row .nav-links {
         
            filter: invert(99%) sepia(1%) saturate(1715%) hue-rotate(198deg) brightness(121%) contrast(100%);
        }
    
    }

    
    
}

